          - minimum perl version really really fixed now
          - drop [Test::UnusedVars] - too many false positives; perl-critic is
            better suited to address these sorts of issues
          - Makefile.PL now checks for 'git' command, so we can get NA reports
            for every smoker that tried to look at us (before attempting to
            install all the prerequisites)

0.057     2014-04-11 01:04:20Z
          - minimum perl version really softened to 5.10.1, except when
            minting distributions (which should have happened in v0.051)
          - when building as 'dzil build' or 'dzil release', add a .latest
            symlink to facilitate future grepping across repositories

0.056     2014-04-08 02:43:13Z
          - automatically add keywords to metadata, extracted from # KEYWORDS:
            comment in main module
          - switch from [Test::Version] to [CheckStrictVersion]

0.055     2014-03-24 04:03:47Z
          - fix missing prereq declaration needed from last release

0.054     2014-03-23 04:49:15Z
          - pass default_jobs => 9 option to all installer tools in use, and
            [RunExtraTests]
          - also ensure we never index corpus/; only list no_index directories
            when they actually exist

0.053     2014-03-12 15:01:19Z
          - now using [Test::CleanNamespaces] to build this distribution as
            well as in newly-minted distributions
          - make airplane mode actually work (doh!)

0.052     2014-02-25 04:56:32Z
          - [VerifyPhases] added (another information-only plugin)
          - added missing prereq (from v0.051)
          - minted clean-namespaces.t test no longer skips ::Conflicts
            module (added in v0.019)

0.051     2014-02-23 01:10:45Z
          - fix argument passed to [Git::Commit] that no longer works now that
            it uses Path::Tiny instead of Path::Class
          - new "surgical_podweaver" configuration option