@@ -3,8 +3,34 @@ use warnings FATAL => 'all';
 
 use Test::More;
 use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
-use {{ $dist->name =~ s/-/::/gr }};
+{{
+    ($zilla_plugin) = ($dist->name =~ /^Dist-Zilla-Plugin-(.+)$/g);
+    $zilla_plugin //= '';
+    $zilla_plugin =~ s/-/::/g;
 
-fail('this test is TODO!');
+    $zilla_plugin
+        ? <<PLUGIN
+use Test::DZil;
+use Path::Tiny;
+
+my \$tzil = Builder->from_config(
+    { dist_root => 't/does-not-exist' },
+    {
+        add_files => {
+            path(qw(source dist.ini)) => simple_ini(
+                [ GatherDir => ],
+                [ '$zilla_plugin' => ... ],
+            ),
+            path(qw(source lib Foo.pm)) => "package Foo;\\n1;\\n",
+        },
+    },
+);
+
+\$tzil->build;
+
+PLUGIN
+        : 'use ' . $dist->name =~ s/-/::/gr . ';'
+            . "\n\nfail('this test is TODO!');"
+}}
 
 done_testing;
